# random-karma

./: .gitignore  Cargo.toml  README.md  Trunk.toml  chart_helpers.js  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  transform_csv.py
.cargo/: config.toml
.github/workflows/: deploy.yml  e2e.yml  main.yml
src/: cache.rs  cars.csv  chart.rs  components.rs  config.rs  hooks.rs  lib.rs  main.rs  utils.rs  worker_agent.rs
src/controllers/: calculation.rs  chart.rs  mod.rs  precache.rs
src/state/: request.rs
style/: main.css
tests/e2e/: app.spec.ts
