[package]
name = "random_karma"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Navigator",
    "Performance",
] }
csv = "1.1"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand_distr = "0.5.1"
log = "0.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21", features = ["csr"] }
yew-agent = "0.3"
serde_json = "1.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
futures = "0.3.31"
regex = "1.11"
once_cell = "1.19"