[package]
name = "random_karma"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.3"
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = "0.3"
js-sys = "0.3"
log = "0.4"
once_cell = "1.19"
rand = "0.9"
rand_distr = "0.5"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Element",
    "HtmlInputElement",
    "Navigator",
    "Window",
] }
yew = { version = "0.21", features = ["csr"] }
yew-agent = "0.3"
